--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -129,7 +129,7 @@ body {
 .product-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-cover: cover;
     transition: transform 8s linear;
 }
 
